# ThinkDome

./: .gitignore  README copy.md  README.md  apiusage.txt  llm_tool.md  pyproject.toml  requirements.txt  sandbox_output.txt  thinkdome_kaggle.ipynb
docker/: docker-compose.yml
docker/executor/: Dockerfile  build.sh
docker/proxy/: squid.conf
docker/thinkdome/: Dockerfile  entrypoint.sh
notebook/: thinkdome_kaggle.ipynb
security/: seccomp.json
storage/: thinkbox.db  users.json.migrated
tests/: conftest.py  test_execute.py  test_files.py  test_health.py  test_languages.py  test_orchestrator.py  test_sandbox_sdk.py  test_sandboxes.py  test_sessions.py  test_vulnerability.py  test_workspaces.py
thinkdome/: __init__.py  _version.py  cli.py  main.py  sandbox.py  server.py
thinkdome/api/: admin.py  auth.py  dependencies.py  execute.py  files.py  health.py  languages.py  observability.py  orchestrator.py  search_tool.py  sessions.py  workspaces.py
thinkdome/core/: config.py  exceptions.py  logging.py  security.py
thinkdome/executors/: base.py  cpp_stub.py  csharp_stub.py  factory.py  java_stub.py  python_docker.py  subprocess_executor.py
thinkdome/models/: __init__.py  execution.py  files.py  languages.py  orchestrator.py  search.py  sessions.py  workspaces.py
thinkdome/services/: auth_service.py  db_service.py  execution_service.py  file_service.py  orchestrator_service.py  request_log_service.py  search_service.py  session_service.py  workspace_service.py
thinkdome/static/: index.html
thinkdome/utils/: code_wrapper.py  files.py
