[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinkdome"
version = "0.2.0"
description = "Secure code execution sandbox and tool orchestrator for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "abeldirectory252" },
]
keywords = ["sandbox", "ai", "llm", "code-execution", "docker", "orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "docker>=7.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/abeldirectory252/ThinkDome"
Repository = "https://github.com/abeldirectory252/ThinkDome"
Issues = "https://github.com/abeldirectory252/ThinkDome/issues"

[project.scripts]
thinkdome = "thinkdome.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["thinkdome"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120